# GeminiAPITest

./: .gitignore  .qmlls.ini  CMakeLists.txt  KRunner.md  Main.qml  README.md  geminiapi.cpp  geminiapi.h  main.cpp
resources/qml/: Main.qml
src/: main.cpp
src/api/: geminiapi.cpp  geminiapi.h  message.cpp  message.h  messagemodel.cpp  messagemodel.h
src/utils/: Logger.cpp  Logger.h
